--- a/app/(iusim)/_sections/modelo/modelo.module.css
+++ b/app/(iusim)/_sections/modelo/modelo.module.css
@@ -1,7 +1,8 @@
 .root {
   background-color: var(--color-midnight);
-  padding-top: clamp(80px, 10vw, 160px);
-  padding-bottom: clamp(80px, 10vw, 160px);
+  padding-top: clamp(48px, 10vw, 160px);
+  padding-bottom: clamp(48px, 10vw, 160px);
+  border-top: 1px solid var(--color-border);
 }
 
 .inner {
